// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mode-change parse mode change followed by another file 1`] = `
{
  "files": [
    {
      "chunks": [],
      "newMode": "100755",
      "oldMode": "100644",
      "path": "script.sh",
      "type": "ChangedFile",
    },
    {
      "chunks": [
        {
          "changes": [
            {
              "content": "# Title",
              "lineAfter": 1,
              "lineBefore": 1,
              "type": "UnchangedLine",
            },
            {
              "content": "old content",
              "lineBefore": 2,
              "type": "DeletedLine",
            },
            {
              "content": "new content",
              "lineAfter": 2,
              "type": "AddedLine",
            },
          ],
          "context": undefined,
          "fromFileRange": {
            "lines": 3,
            "start": 1,
          },
          "toFileRange": {
            "lines": 3,
            "start": 1,
          },
          "type": "Chunk",
        },
      ],
      "newMode": undefined,
      "oldMode": undefined,
      "path": "readme.md",
      "type": "ChangedFile",
    },
  ],
  "type": "GitDiff",
}
`;

exports[`mode-change parse mode change with content changes 1`] = `
{
  "files": [
    {
      "chunks": [
        {
          "changes": [
            {
              "content": "#!/bin/bash",
              "lineAfter": 1,
              "lineBefore": 1,
              "type": "UnchangedLine",
            },
            {
              "content": "echo "hello"",
              "lineBefore": 2,
              "type": "DeletedLine",
            },
            {
              "content": "echo "world"",
              "lineAfter": 2,
              "type": "AddedLine",
            },
          ],
          "context": undefined,
          "fromFileRange": {
            "lines": 3,
            "start": 1,
          },
          "toFileRange": {
            "lines": 3,
            "start": 1,
          },
          "type": "Chunk",
        },
      ],
      "newMode": "100755",
      "oldMode": "100644",
      "path": "script.sh",
      "type": "ChangedFile",
    },
  ],
  "type": "GitDiff",
}
`;

exports[`mode-change parse mode change with rename 1`] = `
{
  "files": [
    {
      "chunks": [],
      "newMode": "100644",
      "oldMode": "100755",
      "pathAfter": "script.sh",
      "pathBefore": "run.sh",
      "type": "RenamedFile",
    },
  ],
  "type": "GitDiff",
}
`;

exports[`mode-change parse mode-only change 1`] = `
{
  "files": [
    {
      "chunks": [],
      "newMode": "100755",
      "oldMode": "100644",
      "path": "script.sh",
      "type": "ChangedFile",
    },
  ],
  "type": "GitDiff",
}
`;
